# RReader

./: .env  .gitignore  Cargo.toml  README.md  book.db  build.rs  build_mac.sh  document_controller.rs  optimization_design.md
assets/: Info.plist  app_icon.icns
src/: app_handler.rs  db_test.rs  lib.rs  main.rs  schema.rs
src/cache/: cache.rs  mod.rs
src/controllers/: document_controller.rs  history_controller.rs  mod.rs
src/dao/: db_utils.rs  mod.rs  recent_dao.rs
src/decoder/: decode_service.rs  decoder.rs  link.rs  mod.rs  page_info.rs  pdf.rs  rect.rs
src/decoder/djvu/: djvu_decoder.rs  djvu_document.rs  mod.rs
src/decoder/pdf/: mod.rs  pdf_decoder.rs  pdf_document.rs  pdf_page.rs  utils.rs
src/decoder/tiff/: djvu_document.rs  mod.rs  tiff_decoder.rs
src/entity/: mod.rs  outline_item.rs  recent.rs  reflow.rs
src/page/: mod.rs  node.rs  page.rs  page_node.rs  page_render.rs  view_state.rs
src/pdf/: document.rs  mod.rs  page.rs  pdf_document.rs  pdf_page.rs  renderer.rs  utils.rs
src/state/: mod.rs  state.rs
src/tts/: mod.rs  tts_service.rs
src/ui/: main_viewmodel.rs  mod.rs  utils.rs
ui/: document_view.slint  history_components.slint  history_view.slint  main.slint  types.slint  ui_utils.slint
ui/controls/: busy-layer.slint  document_toolbar.slint  generic.slint  history_toolbar.slint  outline_panel.slint
ui/datatypes/: document_datatypes.slint  history_datatypes.slint
ui/style/: styles.slint
