[package]
name = "rreader"
version = "0.1.0"
edition = "2021"

[dependencies]
mupdf = "0.5.0"
slint = "1.14.1"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
image = "0.25.9"
anyhow = "1.0.100"
thiserror = "2.0.17"
futures = "0.3.31"
async-trait = "0.1.89"
crossbeam = "0.8.4"
imageproc = "0.25.0"
rfd = "0.15.4"
log="0.4.28"
env_logger="0.11.8"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
opt-level = 3          # 最高优化级别
lto = "fat"            # 链接时优化（消除跨模块冗余）
codegen-units = 1      # 单代码生成单元（提升优化效果）
strip = "debuginfo"    # 移除调试信息（不影响性能，减少二进制体积）
panic = "abort"